Fix 'After the migration to aq6 the change of views takes a long time '

This commit also avoids flooding console with AqBanking warnings

This problem does not occur until aq6, which indicates that the timing
of aliases has deteriorated there.

The loop over the accounts was moved to the outside to improve performance.

BUG:416963
FIXED-IN:4.8.5,5.0.8